--- a/content/posts/2020-03-20-first.md
+++ b/content/posts/2020-03-20-first.md
@@ -1,5 +1,6 @@
 ---
 title: First post
+date: 2020-03-30
 author: mdwyer
 ---
 Well, here it is.  I thought I should attempt to start *some* platform to rant and share things on, tech related and whatnot.
