Add basic cover photo functionality to posts

--- a/content/blog/2020-03-20-first/2020-03-20-first.md
+++ b/content/blog/2020-03-20-first/2020-03-20-first.md
@@ -1,6 +1,7 @@
 ---
 title: First post
 date: 2020-03-30
+cover: danielle-macinnes-IuLgi9PWETU-unsplash.jpg
 author: mdwyer
 ---
 Well, here it is.  I thought I should attempt to start *some* platform to rant and share things on, tech related and whatnot.
